# MultiThreading

./: CMakeLists.txt  MultiThreading.pro  README.md  gdb_test_for_MAX11.txt  valgrind_test_for_MAX11.txt
inc/: common.h  primary.h  worker.h  workercallbackinterface.h
src/: main.cpp  primary.cpp  worker.cpp
